[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
thiserror = "2.0.11"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.2"
chrono = "0.4"
futures = "0.3"
rusqlite = { version = "0.33.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26.0"
anyhow = "1.0"
lazy_static = "1.4"